--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,13 @@
     <version>6.0.7</version>
 </dependency>
 
+<!-- https://mvnrepository.com/artifact/org.springframework/spring-web -->
+<dependency>
+    <groupId>org.springframework</groupId>
+    <artifactId>spring-web</artifactId>
+    <version>6.0.7</version>
+</dependency>
+
   </dependencies>
   <build>
     <finalName>my-webapp</finalName>
